hy340/phase3/compilers1/phase-3/parser.output
Terminals unused in grammar

   BLOCK_COMMENT
   LINE_COMMENT
   ESCAPE_CHARACTERS
   SPACE
   UNDEFINED


State 97 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt stmts
    3      | %empty

    4 stmt: expr SEMICOLON
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt

    9 $@1: %empty

   10 stmt: BREAK $@1 SEMICOLON

   11 $@2: %empty

   12 stmt: CONTINUE $@2 SEMICOLON
   13     | block
   14     | funcdef
   15     | SEMICOLON

   16 expr: assignexpr
   17     | expr PLUS expr
   18     | expr MINUS expr
   19     | expr MULTIPLY expr
   20     | expr DIV expr
   21     | expr MOD expr
   22     | expr BIGGER expr
   23     | expr BIGGER_EQ expr
   24     | expr LESS expr
   25     | expr LESS_EQ expr
   26     | expr EQUAL expr
   27     | expr DIFFER expr
   28     | expr AND Q expr
   29     | expr OR Q expr
   30     | term

   31 Q: %empty

   32 term: START_PARENTHESIS expr END_PARENTHESIS
   33     | primary
   34     | MINUS expr
   35     | PLUSPLUS lvalue

   36 $@3: %empty

   37 term: lvalue $@3 PLUSPLUS
   38     | MINUSMINUS lvalue

   39 $@4: %empty

   40 term: lvalue $@4 MINUSMINUS
   41     | NOT expr

   42 primary: lvalue
   43        | call
   44        | objectdef
   45        | START_PARENTHESIS funcdef END_PARENTHESIS
   46        | const

   47 lvalue: ID
   48       | LOCAL ID
   49       | DOUBLE_COLON ID
   50       | member

   51 $@5: %empty

   52 assignexpr: lvalue $@5 ASSIGN expr
   53           | call ASSIGN expr

   54 $@6: %empty

   55 member: lvalue DOT $@6 ID
   56       | lvalue START_BRACKET expr END_BRACKET

   57 $@7: %empty

   58 member: call DOT $@7 ID
   59       | call START_BRACKET expr END_BRACKET

   60 call: call START_PARENTHESIS elist END_PARENTHESIS

   61 $@8: %empty

   62 call: lvalue $@8 callsuffix
   63     | START_PARENTHESIS funcdef END_PARENTHESIS START_PARENTHESIS elist END_PARENTHESIS

   64 callsuffix: normcall
   65           | methodcall

   66 normcall: START_PARENTHESIS elist END_PARENTHESIS

   67 methodcall: DOUBLE_DOT ID START_PARENTHESIS elist END_PARENTHESIS

   68 elist: expr commaexpr
   69      | %empty

   70 commaexpr: COMMA expr commaexpr
   71          | %empty

   72 objectdef: START_BRACKET elist END_BRACKET
   73          | START_BRACKET indexed END_BRACKET

   74 indexed: indexedelem commaindexedelem

   75 commaindexedelem: COMMA indexedelem commaindexedelem
   76                 | %empty

   77 indexedelem: CURLY_START_BRACKET expr COLON expr CURLY_END_BRACKET

   78 $@9: %empty

   79 block: CURLY_START_BRACKET $@9 CURLY_END_BRACKET

   80 $@10: %empty

   81 block: CURLY_START_BRACKET $@10 stmt program CURLY_END_BRACKET

   82 $@11: %empty

   83 $@12: %empty

   84 $@13: %empty

   85 funcdef: FUNCTION $@11 START_PARENTHESIS $@12 idlist END_PARENTHESIS $@13 block

   86 $@14: %empty

   87 $@15: %empty

   88 $@16: %empty

   89 $@17: %empty

   90 funcdef: FUNCTION $@14 ID $@15 START_PARENTHESIS $@16 idlist END_PARENTHESIS $@17 block

   91 const: REAL
   92      | INTEGER
   93      | STRING
   94      | NIL
   95      | TRUE
   96      | FALSE

   97 $@18: %empty

   98 idlist: ID $@18 commaid
   99       | %empty

  100 $@19: %empty

  101 commaid: COMMA ID $@19 commaid
  102        | %empty

  103 ifprefix: IF START_PARENTHESIS expr END_PARENTHESIS

  104 ifstmt: ifprefix stmt
  105       | ifprefix stmt elseprefix stmt

  106 elseprefix: ELSE

  107 whilestart: WHILE

  108 whilecond: START_PARENTHESIS expr END_PARENTHESIS

  109 whilestmt: whilestart whilecond stmt

  110 N: %empty

  111 M: %empty

  112 $@20: %empty

  113 forprefix: FOR $@20 START_PARENTHESIS elist SEMICOLON M expr SEMICOLON

  114 forstmt: forprefix N elist END_PARENTHESIS N stmt N

  115 $@21: %empty

  116 returnstmt: RETURN $@21 expr SEMICOLON

  117 $@22: %empty

  118 returnstmt: RETURN $@22 SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
ASSIGN (258) 52 53
STRING (259) 93
INTEGER (260) 92
REAL (261) 91
LOCAL (262) 48
NIL (263) 94
ID (264) 47 48 49 55 58 67 90 98 101
BLOCK_COMMENT (265)
LINE_COMMENT (266)
ESCAPE_CHARACTERS (267)
SPACE (268)
IF (269) 103
ELSE (270) 106
WHILE (271) 107
FOR (272) 113
FUNCTION (273) 85 90
RETURN (274) 116 118
BREAK (275) 10
CONTINUE (276) 12
AND (277) 28
NOT (278) 41
OR (279) 29
TRUE (280) 95
FALSE (281) 96
MINUS (282) 18 34
EQUAL (283) 26
DIFFER (284) 27
BIGGER (285) 22
LESS (286) 24
BIGGER_EQ (287) 23
LESS_EQ (288) 25
MINUSMINUS (289) 38 40
PLUSPLUS (290) 35 37
MOD (291) 21
MULTIPLY (292) 19
DIV (293) 20
PLUS (294) 17
CURLY_START_BRACKET (295) 77 79 81
CURLY_END_BRACKET (296) 77 79 81
START_BRACKET (297) 56 59 72 73
END_BRACKET (298) 56 59 72 73
START_PARENTHESIS (299) 32 45 60 63 66 67 85 90 103 108 113
END_PARENTHESIS (300) 32 45 60 63 66 67 85 90 103 108 114
SEMICOLON (301) 4 10 12 15 113 116 118
COMMA (302) 70 75 101
COLON (303) 77
DOUBLE_COLON (304) 49
DOT (305) 55 58
DOUBLE_DOT (306) 67
UNDEFINED (307)
UMINUS (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1, on right: 0 81
stmts (56)
    on left: 2 3, on right: 1 2
stmt (57)
    on left: 4 5 6 7 8 10 12 13 14 15, on right: 2 81 104 105 109 114
$@1 (58)
    on left: 9, on right: 10
$@2 (59)
    on left: 11, on right: 12
expr (60)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30, on right:
    4 17 18 19 20 21 22 23 24 25 26 27 28 29 32 34 41 52 53 56 59 68
    70 77 103 108 113 116
Q (61)
    on left: 31, on right: 28 29
term (62)
    on left: 32 33 34 35 37 38 40 41, on right: 30
$@3 (63)
    on left: 36, on right: 37
$@4 (64)
    on left: 39, on right: 40
primary (65)
    on left: 42 43 44 45 46, on right: 33
lvalue (66)
    on left: 47 48 49 50, on right: 35 37 38 40 42 52 55 56 62
assignexpr (67)
    on left: 52 53, on right: 16
$@5 (68)
    on left: 51, on right: 52
member (69)
    on left: 55 56 58 59, on right: 50
$@6 (70)
    on left: 54, on right: 55
$@7 (71)
    on left: 57, on right: 58
call (72)
    on left: 60 62 63, on right: 43 53 58 59 60
$@8 (73)
    on left: 61, on right: 62
callsuffix (74)
    on left: 64 65, on right: 62
normcall (75)
    on left: 66, on right: 64
methodcall (76)
    on left: 67, on right: 65
elist (77)
    on left: 68 69, on right: 60 63 66 67 72 113 114
commaexpr (78)
    on left: 70 71, on right: 68 70
objectdef (79)
    on left: 72 73, on right: 44
indexed (80)
    on left: 74, on right: 73
commaindexedelem (81)
    on left: 75 76, on right: 74 75
indexedelem (82)
    on left: 77, on right: 74 75
block (83)
    on left: 79 81, on right: 13 85 90
$@9 (84)
    on left: 78, on right: 79
$@10 (85)
    on left: 80, on right: 81
funcdef (86)
    on left: 85 90, on right: 14 45 63
$@11 (87)
    on left: 82, on right: 85
$@12 (88)
    on left: 83, on right: 85
$@13 (89)
    on left: 84, on right: 85
$@14 (90)
    on left: 86, on right: 90
$@15 (91)
    on left: 87, on right: 90
$@16 (92)
    on left: 88, on right: 90
$@17 (93)
    on left: 89, on right: 90
const (94)
    on left: 91 92 93 94 95 96, on right: 46
idlist (95)
    on left: 98 99, on right: 85 90
$@18 (96)
    on left: 97, on right: 98
commaid (97)
    on left: 101 102, on right: 98 101
$@19 (98)
    on left: 100, on right: 101
ifprefix (99)
    on left: 103, on right: 104 105
ifstmt (100)
    on left: 104 105, on right: 5
elseprefix (101)
    on left: 106, on right: 105
whilestart (102)
    on left: 107, on right: 109
whilecond (103)
    on left: 108, on right: 109
whilestmt (104)
    on left: 109, on right: 6
N (105)
    on left: 110, on right: 114
M (106)
    on left: 111, on right: 113
forprefix (107)
    on left: 113, on right: 114
$@20 (108)
    on left: 112, on right: 113
forstmt (109)
    on left: 114, on right: 7
returnstmt (110)
    on left: 116 118, on right: 8
$@21 (111)
    on left: 115, on right: 116
$@22 (112)
    on left: 117, on right: 118


State 0

    0 $accept: . program $end

    STRING               shift, and go to state 1
    INTEGER              shift, and go to state 2
    REAL                 shift, and go to state 3
    LOCAL                shift, and go to state 4
    NIL                  shift, and go to state 5
    ID                   shift, and go to state 6
    IF                   shift, and go to state 7
    WHILE                shift, and go to state 8
    FOR                  shift, and go to state 9
    FUNCTION             shift, and go to state 10
    RETURN               shift, and go to state 11
    BREAK                shift, and go to state 12
    CONTINUE             shift, and go to state 13
    NOT                  shift, and go to state 14
    TRUE                 shift, and go to state 15
    FALSE                shift, and go to state 16
    MINUS                shift, and go to state 17
    MINUSMINUS           shift, and go to state 18
    PLUSPLUS             shift, and go to state 19
    CURLY_START_BRACKET  shift, and go to state 20
    START_BRACKET        shift, and go to state 21
    START_PARENTHESIS    shift, and go to state 22
    SEMICOLON            shift, and go to state 23
    DOUBLE_COLON         shift, and go to state 24

    $default  reduce using rule 3 (stmts)

    program     go to state 25
    stmts       go to state 26
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifprefix    go to state 39
    ifstmt      go to state 40
    whilestart  go to state 41
    whilestmt   go to state 42
    forprefix   go to state 43
    forstmt     go to state 44
    returnstmt  go to state 45


State 1

   93 const: STRING .

    $default  reduce using rule 93 (const)


State 2

   92 const: INTEGER .

    $default  reduce using rule 92 (const)


State 3

   91 const: REAL .

    $default  reduce using rule 91 (const)


State 4

   48 lvalue: LOCAL . ID

    ID  shift, and go to state 46


State 5

   94 const: NIL .

    $default  reduce using rule 94 (const)


State 6

   47 lvalue: ID .

    $default  reduce using rule 47 (lvalue)


State 7

  103 ifprefix: IF . START_PARENTHESIS expr END_PARENTHESIS

    START_PARENTHESIS  shift, and go to state 47


State 8

  107 whilestart: WHILE .

    $default  reduce using rule 107 (whilestart)


State 9

  113 forprefix: FOR . $@20 START_PARENTHESIS elist SEMICOLON M expr SEMICOLON

    $default  reduce using rule 112 ($@20)

    $@20  go to state 48


State 10

   85 funcdef: FUNCTION . $@11 START_PARENTHESIS $@12 idlist END_PARENTHESIS $@13 block
   90        | FUNCTION . $@14 ID $@15 START_PARENTHESIS $@16 idlist END_PARENTHESIS $@17 block

    ID        reduce using rule 86 ($@14)
    $default  reduce using rule 82 ($@11)

    $@11  go to state 49
    $@14  go to state 50


State 11

  116 returnstmt: RETURN . $@21 expr SEMICOLON
  118           | RETURN . $@22 SEMICOLON

    SEMICOLON  reduce using rule 117 ($@22)
    $default   reduce using rule 115 ($@21)

    $@21  go to state 51
    $@22  go to state 52


State 12

   10 stmt: BREAK . $@1 SEMICOLON

    $default  reduce using rule 9 ($@1)

    $@1  go to state 53


State 13

   12 stmt: CONTINUE . $@2 SEMICOLON

    $default  reduce using rule 11 ($@2)

    $@2  go to state 54


State 14

   41 term: NOT . expr

    STRING             shift, and go to state 1
    INTEGER            shift, and go to state 2
    REAL               shift, and go to state 3
    LOCAL              shift, and go to state 4
    NIL                shift, and go to state 5
    ID                 shift, and go to state 6
    NOT                shift, and go to state 14
    TRUE               shift, and go to state 15
    FALSE              shift, and go to state 16
    MINUS              shift, and go to state 17
    MINUSMINUS         shift, and go to state 18
    PLUSPLUS           shift, and go to state 19
    START_BRACKET      shift, and go to state 21
    START_PARENTHESIS  shift, and go to state 22
    DOUBLE_COLON       shift, and go to state 24

    expr        go to state 55
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 15

   95 const: TRUE .

    $default  reduce using rule 95 (const)


State 16

   96 const: FALSE .

    $default  reduce using rule 96 (const)


State 17

   34 term: MINUS . expr

    STRING             shift, and go to state 1
    INTEGER            shift, and go to state 2
    REAL               shift, and go to state 3
    LOCAL              shift, and go to state 4
    NIL                shift, and go to state 5
    ID                 shift, and go to state 6
    NOT                shift, and go to state 14
    TRUE               shift, and go to state 15
    FALSE              shift, and go to state 16
    MINUS              shift, and go to state 17
    MINUSMINUS         shift, and go to state 18
    PLUSPLUS           shift, and go to state 19
    START_BRACKET      shift, and go to state 21
    START_PARENTHESIS  shift, and go to state 22
    DOUBLE_COLON       shift, and go to state 24

    expr        go to state 56
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 18

   38 term: MINUSMINUS . lvalue

    LOCAL              shift, and go to state 4
    ID                 shift, and go to state 6
    START_PARENTHESIS  shift, and go to state 57
    DOUBLE_COLON       shift, and go to state 24

    lvalue  go to state 58
    member  go to state 33
    call    go to state 59


State 19

   35 term: PLUSPLUS . lvalue

    LOCAL              shift, and go to state 4
    ID                 shift, and go to state 6
    START_PARENTHESIS  shift, and go to state 57
    DOUBLE_COLON       shift, and go to state 24

    lvalue  go to state 60
    member  go to state 33
    call    go to state 59


State 20

   79 block: CURLY_START_BRACKET . $@9 CURLY_END_BRACKET
   81      | CURLY_START_BRACKET . $@10 stmt program CURLY_END_BRACKET

    CURLY_END_BRACKET  reduce using rule 78 ($@9)
    $default           reduce using rule 80 ($@10)

    $@9   go to state 61
    $@10  go to state 62


State 21

   72 objectdef: START_BRACKET . elist END_BRACKET
   73          | START_BRACKET . indexed END_BRACKET

    STRING               shift, and go to state 1
    INTEGER              shift, and go to state 2
    REAL                 shift, and go to state 3
    LOCAL                shift, and go to state 4
    NIL                  shift, and go to state 5
    ID                   shift, and go to state 6
    NOT                  shift, and go to state 14
    TRUE                 shift, and go to state 15
    FALSE                shift, and go to state 16
    MINUS                shift, and go to state 17
    MINUSMINUS           shift, and go to state 18
    PLUSPLUS             shift, and go to state 19
    CURLY_START_BRACKET  shift, and go to state 63
    START_BRACKET        shift, and go to state 21
    START_PARENTHESIS    shift, and go to state 22
    DOUBLE_COLON         shift, and go to state 24

    $default  reduce using rule 69 (elist)

    expr         go to state 64
    term         go to state 29
    primary      go to state 30
    lvalue       go to state 31
    assignexpr   go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 65
    objectdef    go to state 35
    indexed      go to state 66
    indexedelem  go to state 67
    const        go to state 38


State 22

   32 term: START_PARENTHESIS . expr END_PARENTHESIS
   45 primary: START_PARENTHESIS . funcdef END_PARENTHESIS
   63 call: START_PARENTHESIS . funcdef END_PARENTHESIS START_PARENTHESIS elist END_PARENTHESIS

    STRING             shift, and go to state 1
    INTEGER            shift, and go to state 2
    REAL               shift, and go to state 3
    LOCAL              shift, and go to state 4
    NIL                shift, and go to state 5
    ID                 shift, and go to state 6
    FUNCTION           shift, and go to state 10
    NOT                shift, and go to state 14
    TRUE               shift, and go to state 15
    FALSE              shift, and go to state 16
    MINUS              shift, and go to state 17
    MINUSMINUS         shift, and go to state 18
    PLUSPLUS           shift, and go to state 19
    START_BRACKET      shift, and go to state 21
    START_PARENTHESIS  shift, and go to state 22
    DOUBLE_COLON       shift, and go to state 24

    expr        go to state 68
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 69
    const       go to state 38


State 23

   15 stmt: SEMICOLON .

    $default  reduce using rule 15 (stmt)


State 24

   49 lvalue: DOUBLE_COLON . ID

    ID  shift, and go to state 70


State 25

    0 $accept: program . $end

    $end  shift, and go to state 71


State 26

    1 program: stmts .

    $default  reduce using rule 1 (program)


State 27

    2 stmts: stmt . stmts

    STRING               shift, and go to state 1
    INTEGER              shift, and go to state 2
    REAL                 shift, and go to state 3
    LOCAL                shift, and go to state 4
    NIL                  shift, and go to state 5
    ID                   shift, and go to state 6
    IF                   shift, and go to state 7
    WHILE                shift, and go to state 8
    FOR                  shift, and go to state 9
    FUNCTION             shift, and go to state 10
    RETURN               shift, and go to state 11
    BREAK                shift, and go to state 12
    CONTINUE             shift, and go to state 13
    NOT                  shift, and go to state 14
    TRUE                 shift, and go to state 15
    FALSE                shift, and go to state 16
    MINUS                shift, and go to state 17
    MINUSMINUS           shift, and go to state 18
    PLUSPLUS             shift, and go to state 19
    CURLY_START_BRACKET  shift, and go to state 20
    START_BRACKET        shift, and go to state 21
    START_PARENTHESIS    shift, and go to state 22
    SEMICOLON            shift, and go to state 23
    DOUBLE_COLON         shift, and go to state 24

    $default  reduce using rule 3 (stmts)

    stmts       go to state 72
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifprefix    go to state 39
    ifstmt      go to state 40
    whilestart  go to state 41
    whilestmt   go to state 42
    forprefix   go to state 43
    forstmt     go to state 44
    returnstmt  go to state 45


State 28

    4 stmt: expr . SEMICOLON
   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . MULTIPLY expr
   20     | expr . DIV expr
   21     | expr . MOD expr
   22     | expr . BIGGER expr
   23     | expr . BIGGER_EQ expr
   24     | expr . LESS expr
   25     | expr . LESS_EQ expr
   26     | expr . EQUAL expr
   27     | expr . DIFFER expr
   28     | expr . AND Q expr
   29     | expr . OR Q expr

    AND        shift, and go to state 73
    OR         shift, and go to state 74
    MINUS      shift, and go to state 75
    EQUAL      shift, and go to state 76
    DIFFER     shift, and go to state 77
    BIGGER     shift, and go to state 78
    LESS       shift, and go to state 79
    BIGGER_EQ  shift, and go to state 80
    LESS_EQ    shift, and go to state 81
    MOD        shift, and go to state 82
    MULTIPLY   shift, and go to state 83
    DIV        shift, and go to state 84
    PLUS       shift, and go to state 85
    SEMICOLON  shift, and go to state 86


State 29

   30 expr: term .

    $default  reduce using rule 30 (expr)


State 30

   33 term: primary .

    $default  reduce using rule 33 (term)


State 31

   37 term: lvalue . $@3 PLUSPLUS
   40     | lvalue . $@4 MINUSMINUS
   42 primary: lvalue .
   52 assignexpr: lvalue . $@5 ASSIGN expr
   55 member: lvalue . DOT $@6 ID
   56       | lvalue . START_BRACKET expr END_BRACKET
   62 call: lvalue . $@8 callsuffix

    START_BRACKET  shift, and go to state 87
    DOT            shift, and go to state 88

    ASSIGN             reduce using rule 51 ($@5)
    MINUSMINUS         reduce using rule 39 ($@4)
    PLUSPLUS           reduce using rule 36 ($@3)
    START_PARENTHESIS  reduce using rule 61 ($@8)
    DOUBLE_DOT         reduce using rule 61 ($@8)
    $default           reduce using rule 42 (primary)

    $@3  go to state 89
    $@4  go to state 90
    $@5  go to state 91
    $@8  go to state 92


State 32

   16 expr: assignexpr .

    $default  reduce using rule 16 (expr)


State 33

   50 lvalue: member .

    $default  reduce using rule 50 (lvalue)


State 34

   43 primary: call .
   53 assignexpr: call . ASSIGN expr
   58 member: call . DOT $@7 ID
   59       | call . START_BRACKET expr END_BRACKET
   60 call: call . START_PARENTHESIS elist END_PARENTHESIS

    ASSIGN             shift, and go to state 93
    START_BRACKET      shift, and go to state 94
    START_PARENTHESIS  shift, and go to state 95
    DOT                shift, and go to state 96

    $default  reduce using rule 43 (primary)


State 35

   44 primary: objectdef .

    $default  reduce using rule 44 (primary)


State 36

   13 stmt: block .

    $default  reduce using rule 13 (stmt)


State 37

   14 stmt: funcdef .

    $default  reduce using rule 14 (stmt)


State 38

   46 primary: const .

    $default  reduce using rule 46 (primary)


State 39

  104 ifstmt: ifprefix . stmt
  105       | ifprefix . stmt elseprefix stmt

    STRING               shift, and go to state 1
    INTEGER              shift, and go to state 2
    REAL                 shift, and go to state 3
    LOCAL                shift, and go to state 4
    NIL                  shift, and go to state 5
    ID                   shift, and go to state 6
    IF                   shift, and go to state 7
    WHILE                shift, and go to state 8
    FOR                  shift, and go to state 9
    FUNCTION             shift, and go to state 10
    RETURN               shift, and go to state 11
    BREAK                shift, and go to state 12
    CONTINUE             shift, and go to state 13
    NOT                  shift, and go to state 14
    TRUE                 shift, and go to state 15
    FALSE                shift, and go to state 16
    MINUS                shift, and go to state 17
    MINUSMINUS           shift, and go to state 18
    PLUSPLUS             shift, and go to state 19
    CURLY_START_BRACKET  shift, and go to state 20
    START_BRACKET        shift, and go to state 21
    START_PARENTHESIS    shift, and go to state 22
    SEMICOLON            shift, and go to state 23
    DOUBLE_COLON         shift, and go to state 24

    stmt        go to state 97
    expr        go to state 28
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifprefix    go to state 39
    ifstmt      go to state 40
    whilestart  go to state 41
    whilestmt   go to state 42
    forprefix   go to state 43
    forstmt     go to state 44
    returnstmt  go to state 45


State 40

    5 stmt: ifstmt .

    $default  reduce using rule 5 (stmt)


State 41

  109 whilestmt: whilestart . whilecond stmt

    START_PARENTHESIS  shift, and go to state 98

    whilecond  go to state 99


State 42

    6 stmt: whilestmt .

    $default  reduce using rule 6 (stmt)


State 43

  114 forstmt: forprefix . N elist END_PARENTHESIS N stmt N

    $default  reduce using rule 110 (N)

    N  go to state 100


State 44

    7 stmt: forstmt .

    $default  reduce using rule 7 (stmt)


State 45

    8 stmt: returnstmt .

    $default  reduce using rule 8 (stmt)


State 46

   48 lvalue: LOCAL ID .

    $default  reduce using rule 48 (lvalue)


State 47

  103 ifprefix: IF START_PARENTHESIS . expr END_PARENTHESIS

    STRING             shift, and go to state 1
    INTEGER            shift, and go to state 2
    REAL               shift, and go to state 3
    LOCAL              shift, and go to state 4
    NIL                shift, and go to state 5
    ID                 shift, and go to state 6
    NOT                shift, and go to state 14
    TRUE               shift, and go to state 15
    FALSE              shift, and go to state 16
    MINUS              shift, and go to state 17
    MINUSMINUS         shift, and go to state 18
    PLUSPLUS           shift, and go to state 19
    START_BRACKET      shift, and go to state 21
    START_PARENTHESIS  shift, and go to state 22
    DOUBLE_COLON       shift, and go to state 24

    expr        go to state 101
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 48

  113 forprefix: FOR $@20 . START_PARENTHESIS elist SEMICOLON M expr SEMICOLON

    START_PARENTHESIS  shift, and go to state 102


State 49

   85 funcdef: FUNCTION $@11 . START_PARENTHESIS $@12 idlist END_PARENTHESIS $@13 block

    START_PARENTHESIS  shift, and go to state 103


State 50

   90 funcdef: FUNCTION $@14 . ID $@15 START_PARENTHESIS $@16 idlist END_PARENTHESIS $@17 block

    ID  shift, and go to state 104


State 51

  116 returnstmt: RETURN $@21 . expr SEMICOLON

    STRING             shift, and go to state 1
    INTEGER            shift, and go to state 2
    REAL               shift, and go to state 3
    LOCAL              shift, and go to state 4
    NIL                shift, and go to state 5
    ID                 shift, and go to state 6
    NOT                shift, and go to state 14
    TRUE               shift, and go to state 15
    FALSE              shift, and go to state 16
    MINUS              shift, and go to state 17
    MINUSMINUS         shift, and go to state 18
    PLUSPLUS           shift, and go to state 19
    START_BRACKET      shift, and go to state 21
    START_PARENTHESIS  shift, and go to state 22
    DOUBLE_COLON       shift, and go to state 24

    expr        go to state 105
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 52

  118 returnstmt: RETURN $@22 . SEMICOLON

    SEMICOLON  shift, and go to state 106


State 53

   10 stmt: BREAK $@1 . SEMICOLON

    SEMICOLON  shift, and go to state 107


State 54

   12 stmt: CONTINUE $@2 . SEMICOLON

    SEMICOLON  shift, and go to state 108


State 55

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . MULTIPLY expr
   20     | expr . DIV expr
   21     | expr . MOD expr
   22     | expr . BIGGER expr
   23     | expr . BIGGER_EQ expr
   24     | expr . LESS expr
   25     | expr . LESS_EQ expr
   26     | expr . EQUAL expr
   27     | expr . DIFFER expr
   28     | expr . AND Q expr
   29     | expr . OR Q expr
   41 term: NOT expr .

    $default  reduce using rule 41 (term)


State 56

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . MULTIPLY expr
   20     | expr . DIV expr
   21     | expr . MOD expr
   22     | expr . BIGGER expr
   23     | expr . BIGGER_EQ expr
   24     | expr . LESS expr
   25     | expr . LESS_EQ expr
   26     | expr . EQUAL expr
   27     | expr . DIFFER expr
   28     | expr . AND Q expr
   29     | expr . OR Q expr
   34 term: MINUS expr .

    $default  reduce using rule 34 (term)


State 57

   63 call: START_PARENTHESIS . funcdef END_PARENTHESIS START_PARENTHESIS elist END_PARENTHESIS

    FUNCTION  shift, and go to state 10

    funcdef  go to state 109


State 58

   38 term: MINUSMINUS lvalue .
   55 member: lvalue . DOT $@6 ID
   56       | lvalue . START_BRACKET expr END_BRACKET
   62 call: lvalue . $@8 callsuffix

    START_BRACKET  shift, and go to state 87
    DOT            shift, and go to state 88

    START_PARENTHESIS  reduce using rule 61 ($@8)
    DOUBLE_DOT         reduce using rule 61 ($@8)
    $default           reduce using rule 38 (term)

    $@8  go to state 92


State 59

   58 member: call . DOT $@7 ID
   59       | call . START_BRACKET expr END_BRACKET
   60 call: call . START_PARENTHESIS elist END_PARENTHESIS

    START_BRACKET      shift, and go to state 94
    START_PARENTHESIS  shift, and go to state 95
    DOT                shift, and go to state 96


State 60

   35 term: PLUSPLUS lvalue .
   55 member: lvalue . DOT $@6 ID
   56       | lvalue . START_BRACKET expr END_BRACKET
   62 call: lvalue . $@8 callsuffix

    START_BRACKET  shift, and go to state 87
    DOT            shift, and go to state 88

    START_PARENTHESIS  reduce using rule 61 ($@8)
    DOUBLE_DOT         reduce using rule 61 ($@8)
    $default           reduce using rule 35 (term)

    $@8  go to state 92


State 61

   79 block: CURLY_START_BRACKET $@9 . CURLY_END_BRACKET

    CURLY_END_BRACKET  shift, and go to state 110


State 62

   81 block: CURLY_START_BRACKET $@10 . stmt program CURLY_END_BRACKET

    STRING               shift, and go to state 1
    INTEGER              shift, and go to state 2
    REAL                 shift, and go to state 3
    LOCAL                shift, and go to state 4
    NIL                  shift, and go to state 5
    ID                   shift, and go to state 6
    IF                   shift, and go to state 7
    WHILE                shift, and go to state 8
    FOR                  shift, and go to state 9
    FUNCTION             shift, and go to state 10
    RETURN               shift, and go to state 11
    BREAK                shift, and go to state 12
    CONTINUE             shift, and go to state 13
    NOT                  shift, and go to state 14
    TRUE                 shift, and go to state 15
    FALSE                shift, and go to state 16
    MINUS                shift, and go to state 17
    MINUSMINUS           shift, and go to state 18
    PLUSPLUS             shift, and go to state 19
    CURLY_START_BRACKET  shift, and go to state 20
    START_BRACKET        shift, and go to state 21
    START_PARENTHESIS    shift, and go to state 22
    SEMICOLON            shift, and go to state 23
    DOUBLE_COLON         shift, and go to state 24

    stmt        go to state 111
    expr        go to state 28
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifprefix    go to state 39
    ifstmt      go to state 40
    whilestart  go to state 41
    whilestmt   go to state 42
    forprefix   go to state 43
    forstmt     go to state 44
    returnstmt  go to state 45


State 63

   77 indexedelem: CURLY_START_BRACKET . expr COLON expr CURLY_END_BRACKET

    STRING             shift, and go to state 1
    INTEGER            shift, and go to state 2
    REAL               shift, and go to state 3
    LOCAL              shift, and go to state 4
    NIL                shift, and go to state 5
    ID                 shift, and go to state 6
    NOT                shift, and go to state 14
    TRUE               shift, and go to state 15
    FALSE              shift, and go to state 16
    MINUS              shift, and go to state 17
    MINUSMINUS         shift, and go to state 18
    PLUSPLUS           shift, and go to state 19
    START_BRACKET      shift, and go to state 21
    START_PARENTHESIS  shift, and go to state 22
    DOUBLE_COLON       shift, and go to state 24

    expr        go to state 112
    term        go to state 29
    primary     go to state 30
    lvalue      go to state 31
    assignexpr  go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 64

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . MULTIPLY expr
   20     | expr . DIV expr
   21     | expr . MOD expr
   22     | expr . BIGGER expr
   23     | expr . BIGGER_EQ expr
   24     | expr . LESS expr
   25     | expr . LESS_EQ expr
   26     | expr . EQUAL expr
   27     | expr . DIFFER expr
   28     | expr . AND Q expr
   29     | expr . OR Q expr
   68 elist: expr . commaexpr
